<resources>
    <string name="app_name">My Application</string>
    <string name="loginbtn">Log In</string>
    <string name="registerBtn">Sign Up</string>
    <string name="username">Full Name</string>
    <string name="Phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register Now</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="Menu">Menu</string>
    <string name="Cart">Cart</string>
    <string name="Wallet">E-Wallet</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>